--- a/src/app/features/product-page/product-page.component.html
+++ b/src/app/features/product-page/product-page.component.html
@@ -32,7 +32,7 @@
               (click)="setActiveTab('shipping')">Pickup & Return</button>
           </div>
           
-          <div class="tab-content" *ngIf="isActiveTab('details')">
+          <div class="tab-content product-description" *ngIf="isActiveTab('details')">
             {{ product.description }}
           </div>
           
