--- a/src/app/features/product-box/product-box.component.html
+++ b/src/app/features/product-box/product-box.component.html
@@ -4,7 +4,14 @@
       <div class="image-container">
           <p *ngIf="product.custom" class="custom-text white-font secondary-font" alt="Custom Icon">CUSTOM</p>
         <!-- <img src="/images/stock_photo.png" alt="{{ product.name }}" class="product-image" (load)="onImageLoad($event)"> -->
-        <img [src]="product.imageUrl" alt="{{ product.name }}" class="product-image" (load)="onImageLoad($event)">
+        <img 
+          [src]="product.imageUrl"
+          [srcset]="product.imageUrl + ' 1x, ' + product.imageUrl + ' 2x'" 
+          sizes="(max-width: 768px) 100vw, 400px"
+          alt="{{ product.name }}" 
+          class="product-image" 
+          (load)="onImageLoad($event)"
+          >
       
       </div>
     </div>
