--- a/src/app/backoffice/admin-shared/admin-reservation-box/admin-reservation-box.component.css
+++ b/src/app/backoffice/admin-shared/admin-reservation-box/admin-reservation-box.component.css
@@ -96,6 +96,12 @@ button:hover {
     min-height: 37px;
 }
 
+.invoice-container,
+.payment-container,
+.status-box-container {
+  position: relative;
+}
+
 .custom-dropdown {
     position: absolute;
     top: 0;
