add under construction page

--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -118,7 +118,7 @@
         <div class="accept-terms-container">
           <a href="FinalTouchCo-RentalAgreement-2024-06-30.pdf" target="_blank" class="terms-link main-font">View full Rental Agreement (PDF)</a>
           <label class="terms-accept-button" >
-            <input type="checkbox" formControlName="agreedToTerms"/> By checking this box, I confirm I’ve read and <b>agree to the Final Touch Co. Rental Agreement</b> and understand I’m responsible for any damage, loss, or late returns.
+            <input type="checkbox" formControlName="agreedToTerms"/> By checking this box, I confirm I’ve read and <b>agree to the Final Touch Decor Co. Rental Agreement</b> and understand I’m responsible for any damage, loss, or late returns.
           </label>
         </div>
       </div>
