--- a/src/app/features/product-page/product-page.component.html
+++ b/src/app/features/product-page/product-page.component.html
@@ -38,7 +38,7 @@
             All rentals must be picked up and returned by the renter in downtown Boise.
             Delivery may be available upon request and is considered on a case-by-case basis, subject to availability.
 
-            <br><br>Late returns will incur a fee of ${{ DAILY_LATE_FEE }} per day, unless prior arrangements have been made with Final Touch Co.
+            <br><br>Late returns will incur a fee of ${{ DAILY_LATE_FEE }} per day, unless prior arrangements have been made with Final Touch Decor.
 
             <br><br>The renter is liable for any damage or loss of items during the rental period. If an item is returned broken, 
             missing, or significantly damaged, a replacement fee up to ${{ product.deposit }} may be charged, based on extent of damage.
