--- a/src/app/home/homepage/hero/hero.component.html
+++ b/src/app/home/homepage/hero/hero.component.html
@@ -21,7 +21,7 @@
     <img class="summary-flower" src="/images/daisy.png">
     <p class="summary-title cursive-font">Elegant event decor, without the waste
     <p class="summary-text">
-        At Final Touch Co., we offer stylish, high-quality rental decor for weddings 
+        At Final Touch Decor, we offer stylish, high-quality rental decor for weddings 
         and events across Boise and the Treasure Valley. From modern arches to vintage 
         accents, our collection is curated to elevate your day — without the cost or 
         waste of buying new. Most of our pieces are thrifted or sustainably sourced, 
