--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -26,8 +26,8 @@
         </div>
         <div class="right-container">
             <div class="title-container">
-                <p class="title">final touch co.</p>
-                <p class="subtitle">event rentals</p>
+                <p class="title">Final Touch Decor Co.</p>
+                <p class="subtitle">custom event rentals</p>
             </div>
             <div class="icons">
                 <img class="logo" src="/images/instagram.png" alt="instagram icon" (click)="routeToInstagram()">
@@ -38,6 +38,6 @@
     </div>
     <div class="bottom-section">
         <p>Boise, Idaho</p>
-        <p>&copy; 2025 Final Touch Co. All Rights Reserved.</p>
+        <p>&copy; 2025 Final Touch Decor Co. All Rights Reserved.</p>
     </div>
 </footer>
